<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calentamiento"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/tituloCalentamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="Bodoni MT"
            android:textColor="@color/colorPrimaryText"
            ></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.50"
        android:orientation="horizontal"
        >
        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifCalentamiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.40"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <TextView
            android:id="@+id/calentamiento1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calentamiento1"
            android:fontFamily="Bodoni MT"
            android:padding="3dp"
            android:textColor="@color/colorPrimaryText"
            ></TextView>
        <TextView
            android:id="@+id/calentamiento2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calentamiento2"
            android:fontFamily="Bodoni MT"
            android:padding="3dp"
            android:textColor="@color/colorPrimaryText"></TextView>
        <TextView
            android:id="@+id/calentamiento3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calentamiento3"
            android:fontFamily="Bodoni MT"
            android:padding="3dp"
            android:textColor="@color/colorPrimaryText"></TextView>
        <TextView
            android:id="@+id/calentamiento4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calentamiento4"
            android:fontFamily="Bodoni MT"
            android:padding="3dp"
            android:textColor="@color/colorPrimaryText"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.20"
        android:orientation="vertical"
        android:gravity="center"
        >

        <Button
            android:id="@+id/calentamientoSiguiente"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:background="@drawable/btnovalado"
            android:text="@string/btn_siguiente"
            android:textColor="@color/colorIcons"
            android:textSize="16sp"
            android:fontFamily="Bodoni MT"
            />
    </LinearLayout>




</LinearLayout>