<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosObtener"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="0.40"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_gravity="left"
            android:textSize="18dp"
            android:inputType="textPersonName"
            android:fontFamily="Bodoni MT"
            android:textColor="@color/colorPrimaryText"
            android:layout_marginLeft="10dp"
            style="@style/Animation.Design.BottomSheetDialog"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textArquero"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:hint="@string/dato_arquero"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_gravity="left"
            android:textSize="18dp"
            android:inputType="textPersonName"
            android:fontFamily="Bodoni MT"
            android:textColor="@color/colorPrimaryText"
            android:layout_marginLeft="10dp"
            style="@style/Animation.Design.BottomSheetDialog"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textClub"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:hint="@string/dato_club"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_gravity="left"
            android:textSize="18dp"
            android:inputType="textPersonName"
            android:fontFamily="Bodoni MT"
            android:textColor="@color/colorPrimaryText"
            android:layout_marginLeft="10dp"
            style="@style/Animation.Design.BottomSheetDialog"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textRonda"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:hint="@string/dato_ronda"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="0.05"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textFecha"
            android:layout_width="130dp"
            android:layout_height="23dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="Bodoni MT"
            android:text="@string/dato_fecha"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textFechaVer"
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:fontFamily="Bodoni MT"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="0.35"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:text="@string/spinner1"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:fontFamily="Bodoni MT"
            android:textColor="@color/colorPrimaryText"
            android:layout_marginLeft="10dp"
            android:autofillHints="@string/spinner1"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:text="@string/spinner2"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"/>
        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:fontFamily="Bodoni MT"
            android:textColor="@color/colorPrimaryText"
            android:layout_marginLeft="10dp"
            android:autofillHints="@string/spinner2"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="0.15"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonCrear"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:fontFamily="Bodoni MT"
            android:background="@drawable/btnovalado"
            android:textColor="@color/colorIcons"
            android:textSize="16sp"
            android:text="@string/dato_crear"
             />
    </LinearLayout>

</LinearLayout>