<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Estadistica">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estadistica1"
            android:textSize="16sp"
            android:layout_marginTop="10dp"></TextView>
        <TextView
            android:id="@+id/flechaDisparada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estadistica2"
            android:textSize="16sp"
            android:layout_marginTop="10dp"></TextView>
        <TextView
            android:id="@+id/puntajeTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estadistica3"
            android:textSize="16sp"
            android:layout_marginTop="10dp"></TextView>
        <TextView
            android:id="@+id/porcentajeAcierto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estadistica4"
            android:textSize="16sp"
            android:layout_marginTop="10dp"></TextView>
        <TextView
            android:id="@+id/puntuacionMedio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"></TextView>
    </LinearLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/graficaTorta"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="30dp">
    </com.github.mikephil.charting.charts.PieChart>



<!--
<com.github.mikephil.charting.charts.BarChart
            android:id="@+id/graficaBarras"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            ></com.github.mikephil.charting.charts.BarChart>
 -->
</LinearLayout>